--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: "https://thedatafixer.github.io/blog/"
+baseURL: "https://thedatafixer.xyz/"
 languageCode: en-us
 title: The Data Fixer 
 theme: PaperMod
