--- a/config.yml
+++ b/config.yml
@@ -34,6 +34,8 @@ params:
       url: "https://youtube.com/@theDataFixer"
     - name: "mastodon"
       url: "https://mastodon.social/@theDataFixer"
+    - name: "linkedin"
+      url: "https://www.linkedin.com/in/omarvaldez5/"
     - name: "telegram"
       url: "https://t.me/theDataFixer"
     - name: "discord"
