Update social media

--- a/config.yml
+++ b/config.yml
@@ -58,8 +58,8 @@ params:
       url: "https://podcasters.spotify.com/pod/show/ovaldez"
     - name: "telegram"
       url: "https://t.me/theDataFixer"
-    - name: "twitter"
-      url: "https://twitter.com/theDataFixer"
+    # - name: "twitter"
+    #   url: "https://twitter.com/theDataFixer"
     - name: "linkedin"
       url: "https://www.linkedin.com/in/omarvaldez5/"
     - name: "rss"
